Add attach-ebs-volume.sh: Find volume based on 'Name' tag and attach to our instance Add stop-instance.sh: Stop our instance. Updated tools to makes sure they are in the correct directory and support /etc/sysconfig/zfs-config

--- a/zfs-config.sh.example
+++ b/zfs-config.sh.example
@@ -51,7 +51,7 @@ remote=""
 
 # Name of the ZFS pool we are creating or manipulating
 
-zfspool="mypool"
+ec2_zfspool="mypool"
 
 # The type of redunancy being used in each vdev
 # Can be mirror, raidz1, raidz2, or raidz3
