--- a/zfs-config.sh.example
+++ b/zfs-config.sh.example
@@ -25,8 +25,20 @@
 
 TOOLS_ROOT="/mypool/tools"
 
+# Set the debug level
+
+# 0 - Debug
+# 1 - Notice
+# 2 - Warning
+# 3 - Error
+
+debug_level="0"
+
 # Amazon EC2 instance id we are backing up to.  If the scripts are running locally on your instance
 # keep them as they are, otherwise change to the instance-id.
+
+    # Enable EC2 backup
+    ec2_backup="false"
 
     instanceid=$(ec2metadata --instance-id)
     
@@ -103,6 +115,37 @@ TOOLS_ROOT="/mypool/tools"
 # Alternate backup to Glacier
 
     glacier_start_sequence="1000"
+
+    # Default days to rotate glacier vaults.  Can over ride in setup-filesystems.sh
+
+    glacier_rotation_days="180"
+
+    # Default rotation number.  
+
+    glacier_start_rotation="100"
+
+# Email reporting: Requires mutt to be installed and configured
+
+    # Address to send reports to
+    email_to="cts-admin@nrg.wustl.edu"
+
+    # Address(s) to cc reports to (use a space to separate)
+    email_cc=""
+
+    # Address(s) to bcc reports to (use a space to separate)
+    email_bcc=""
+
+    # When to send debug level messages (now,report,never)
+    email_debug="report"
+
+    # When to send notice level messages (now,report,never)
+    email_notice="report"
+
+    # When to send warnings level messages (now,report,never)
+    email_warnings="now"
+
+    # When to send error level messages (now,report,never)
+    email_errors="now"
     
 # Snapshot type to be handled
 
