add verify-archives.sh parameterize path to glacier-cmd

--- a/.hgignore
+++ b/.hgignore
@@ -10,3 +10,5 @@ pools_filesystems/setup-filesystems.sh
 amazon-glacier-cmd-interface
 reporting/reports_pending
 reporting/reporting.muttrc
+root.save
+etc.save
