Stop replicating zfs parameters durring send.  Don't drop out of job cleaning until 1 complete pass.

--- a/.hgignore
+++ b/.hgignore
@@ -3,8 +3,10 @@ syntax: glob
 ec2-api*
 zfs-config.sh
 *.sha512
-.*.swp
-.*.orig
+*.swp
+*.orig
+*~
+core
 snapshots/jobs
 backup/jobs
 amazon-glacier-cmd-interface
